# ccg_gwb

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-config.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  install_tmpo2.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: .codecov.yml  ISSUE_TEMPLATE.md
.github/workflows/: CI_test.yml  python-package.yml
ccg_gwb/: __init__.py  ccg_gwb.py  celestial_map.py  multi_pulsar_tools.py  network_tools.py  one_pulsar_tools.py  plotter.py
ccg_gwb/analysis/: PTA_Analyzer.py
ccg_gwb/simulation/: ATNF_utilities.py  PTA_Simulator.py  timing_model_parameters.py  timing_model_simulation.py  toas_simulation.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  ccg_gwb_test_data.py  test_ATNF_utilities.py  test_PTA_simulator.py  test_ccg_gwb.py
tests/data/: J0023+0923.ephem
