[tool.black]
line-length = 120
target_version = ['py39']
include = '\.pyi?$'
extend-exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | _build
    | buck-out
    | build
    | dist
    | docs
    | .ccg_gwb
    | ccg_gwb/src
  )/
  | ccg_gwb/version.py
)
'''

[tool.setuptools_scm]
write_to = "ccg_gwb/version.py"

[tool.bumpversion]
current_version = "0.1.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
tag = true
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "setup.py"
search = '{current_version}'
replace = '{new_version}'

[[tool.bumpversion.files]]
filename = "ccg_gwb/__init__.py"
search = '{current_version}'
replace = '{new_version}'


[build-system]
requires = [
    "setuptools>=40.8.0",
    "wheel",
    "setuptools_scm[toml]>=6.0",
]
build-backend = "setuptools.build_meta"
